fixed nav wrapper on smallest view port with

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -93,14 +93,20 @@ li {
 
 .wrapper {
 	display: flex;
-	flex-direction: column;
-	//justify-content: ;
-	max-height: 100%;
-	width: min-content;
-	//flex-wrap: wrap;
-	overflow-y: scroll;
-	//z-index: 1;
-	flex: 1 0 auto;
+	width: 100%;
+	height: 100%;
+
+	@media screen and (width>=500px) and (height >=500px) {
+
+		flex-direction: column;
+		//justify-content: ;
+		max-height: 100%;
+		width: min-content;
+		//flex-wrap: wrap;
+		overflow-y: scroll;
+		//z-index: 1;
+		flex: 1 0 auto;
+	}
 }
 
 .wrappers {
@@ -229,7 +235,7 @@ li {
 
 .nav {
 	width: 100%;
-	height: max-content;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 
@@ -333,7 +339,7 @@ li {
 		list-style: none;
 		margin: 0;
 		padding: 0;
-		height: 100%;
+		max-height: 100%;
 
 		@media only screen and (width>=500px) and (height>=500px) {
 			width: 60px;
@@ -346,7 +352,7 @@ li {
 			//flex:1 0 auto;
 		}
 
-		@media screen and (height>=615px) {
+		@media screen and (width>=500px) and (height>=615px) {
 			min-height: 502.5px;
 		}
 
